[tool.poetry]
name = "es-service"
version = "0.0.1"
description = ""
authors = ["Timur Mustafin <timur@mustafin.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
aiocsv = "^1.2.3"
fastapi = "^0.87.0"
httpx = "^0.23.1"
slowapi = "^0.1.6"
redis = "^4.3.4"
gunicorn = "^20.1.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
aiocsv = "^1.2.3"
aiofiles = "^22.1.0"
elasticsearch = "^8.5.0"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
